...
    <string name="fragment_story">Story</string>
    <string name="fragment_maps">Peta</string>

    <!--Register-->
    <string name="signup">Daftar</string>
    <string name="signup_message">Belum punya akun? Yuk Daftar</string>
    <string name="error_format_email">Format email yang Anda masukan salah</string>
    <string name="error_length_password">Panjang password minimal 6 karakter</string>
    <string name="error_length_name">Panjang nama minimal 3 karakter</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="login_name_input_hint">Masukkan nama lengkap</string>
    <string name="login_email_input_hint">Masukkan email</string>
    <string name="login_password_input_hint">Masukkan password</string>

...
    <string name="image_preview">Gambar Story</string>
    <string name="uploaded_at">Diunggah pada %1$s</string>
    <string name="type_story_description">Tuliskan cerita kamu hari ini</string>

    <string name="title_collection_widget">Aplikasi Story</string>

    <string name="text_account_created">Akun berhasil dibuat, silahkan login</string>
    <string name="text_account_error">ada error nih</string>
    <string name="text_try_again">Coba Lagi</string>
    <string name="text_failed_take_photo">Gagal mengambil gambar.</string>
    <string name="text_failed_switch_camera">Gagal memunculkan kamera.</string>
    <string name="text_no_permission">Tidak mendapatkan permission.</string>
    <string name="choose_image">Pilih Gambar</string>

...
