...
	android:background="@color/colorRedTransparent"
	app:layout_constraintBottom_toBottomOf="parent"
	app:layout_constraintEnd_toEndOf="parent"
	app:layout_constraintStart_toStartOf="parent">

	<TextView
		android:id="@+id/tv_snackbar_warning"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:padding="@dimen/space_small"
		android:textAlignment="center"
		android:textColor="@color/colorLightRed"
...
